# LogosSort

./: .gitignore  BENCHMARKS.md  JOURNAL.md  LICENSE.md  README.md  logos_sort.py  logos_sort.pyi  logos_sort_commented.py  logos_sort_embed.py  logos_ultra_sort (1).py  pyproject.toml
.claude/: settings.json
.github/workflows/: test.yml
src/cpp/: benchmark.cpp  logos_sort.hpp
src/csharp/: Benchmark.cs  LogosSort.cs
src/go/: benchmark_test.go  go.mod  logos_sort.go
src/java/: Benchmark.java  LogosSort.java
src/javascript/: benchmark.js  logos_sort.js
src/kotlin/: Benchmark.kt  LogosSort.kt
src/logos/: BUILD.md  Makefile  bench.c  compile.bat  logos_compile.py  logos_sort.c  logos_sort.h  logos_sort.lg  timsort.c  timsort.h
src/python/: benchmark.py  benchmark_datasets.py  benchmark_large.py  benchmark_ultra.py  logos_sort.py
src/quantum/: __init__.py  benchmark.py  logos_sort_quantum.py  requirements.txt
src/r/: benchmark_datasets.R  logos_sort.R
src/rust/: Cargo.toml
src/rust/src/: lib.rs  main.rs
src/swift/: Benchmark.swift  LogosSort.swift
src/typescript/: benchmark.ts  logos_sort.ts  tsconfig.json
tests/: test_logos_sort.py
